# YOS

./: CMakeLists.txt  README.md  boot.s  init.c  init_gdt.c  init_idt.c  init_mem.c  init_paging.c  interrupt_handlers.c  isr_wrapper.s  kernel.c  kernel_main.c  linker.ld  mem_info.h  mem_info_type.h  mem_manage.c  mem_manage.h  mem_manage_info.h  mmap.c
HAL/: CMakeLists.txt  basic.h  common.h  common_io.c  tlb_flush.s
init/: CMakeLists.txt
init/gdt/: gdt_flush.s  init_gdt.c
init/interrupt/: idt.s  init_idt.c  interrupt_handlers.c
init/memory/: init_mem.c  init_mem_info.h  mmap.c
kernel/: CMakeLists.txt
kernel/include/: mem_manage.h
kernel/memory/: mem_manage.c  mem_manage_info.h
